# certbot-nginx-unit

./: .gitignore  LICENSE  README.md  installer.py  pyproject.toml  setup.py  snapcraft.yaml  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
certbot_nginx_unit/: __init__.py  configurator.py  installer.py  unitc.py
certbot_nginx_unit/tests/: __init__.py  configurator_test.py  installer_test.py
