[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-nginx-unit"
description = "Nginx Unit plugin for Certbot"
readme = "README.md"
authors = [
    { name = "Manuel Baldassarri", email = "m.baldassarri@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: System Administrators",
    "Topic :: Security :: Cryptography",
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
]
dynamic = ["optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/kea/certbot-nginx-unit"
Issues = "https://github.com/kea/certbot-nginx-unit/issues"

[project.entry-points."certbot.plugins"]
nginx_unit = "certbot_nginx_unit.configurator:Configurator"

[tool.setuptools_scm]
version_file = "version.py"